--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -459,7 +459,8 @@
    "source": [
     "__Question 2:__ This algorithmic choice necessitates that we communicate to the user that we accept human images only when they provide a clear view of a face (otherwise, we risk having unneccessarily frustrated users!). In your opinion, is this a reasonable expectation to pose on the user? If not, can you think of a way to detect humans in images that does not necessitate an image with a clearly presented face?\n",
     "\n",
-    "__Answer:__\n",
+    "__Answer:__ \n",
+    "**the technique we selected for face detection requires a clear view of a face (ie. doesn't perform well on occlusions). If we wanted better performance for a wider variety of photo conditions, we could build a CNN specifically for detecting human faces. The training data should include a diverse set of images from a wide variety of angles, lighting conditions, and partial obscurations (wearing a hat, hand in front of face, etc).**\n",
     "\n",
     "We suggest the face detector from OpenCV as a potential way to detect human images in your algorithm, but you are free to explore other approaches, especially approaches that make use of deep learning :).  Please use the code cell below to design and test your own face detection algorithm.  If you decide to pursue this _optional_ task, report performance on each of the datasets."
    ]
@@ -1694,6 +1695,13 @@
     "img_path = \"images/American_water_spaniel_00648.jpg\"\n",
     "show_img(img_path)\n",
     "human_or_dog(img_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**The link is caused by Keras re-downloading the bottleneck features for ResNet50. this as the link specifies to not to include the top features. Why does Keras download the bottleneck features again? I'm not entirely sure. My best guess is that perhaps when Keras began providing these model weights through keras.applications, something became deprecated in terms of how the weights are formatted or stored. Either way, it's not something to worry about.**"
    ]
   },
   {
