--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -1637,13 +1637,69 @@
     "\n",
     "__Question 6:__ Is the output better than you expected :) ?  Or worse :( ?  Provide at least three possible points of improvement for your algorithm.\n",
     "\n",
-    "__Answer:__  **the output better than i expected but it could be better;**\n",
+    "__Answer:__  \n",
     "\n",
-    "**1_if we use more data and using Image Augmentation**\n",
+    "i **suggest** the output could be better if we do ;\n",
     "\n",
-    "**2_if we add more epochs in the training process but here we can't add more cause more parameters means longer training**\n",
+    "**1_if we use more data and [Augment](https://blog.keras.io/building-powerful-image-classification-models-using-very-little-data.html) the Training Data** \n",
     "\n",
-    "**3_if we use more layers of the neural network**\n"
+    "In order to make the most of our few training examples, we will \"augment\" them via a number of random transformations, so that our model would never see twice the exact same picture. This helps prevent overfitting and helps the model generalize better.\n",
+    "\n",
+    "in Keras this can be done via the keras.preprocessing.image.ImageDataGenerator class. This class allows you to:\n",
+    "\n",
+    "configure random transformations and normalization operations to be done on your image data during training.\n",
+    "\n",
+    "instantiate generators of augmented image batches (and their labels) via .flow(data, labels) or .flow_from_directory(directory). \n",
+    "\n",
+    "These generators can then be used with the Keras model methods that accept data generators as inputs, fit_generator, evaluate_generator and predict_generator. \n",
+    "\n",
+    "rotation_range is a value in degrees (0-180), a range within which to randomly rotate pictures\n",
+    "\n",
+    "width_shift and height_shift are ranges (as a fraction of total width or height) within which to randomly translate pictures vertically or horizontally\n",
+    "\n",
+    "rescale is a value by which we will multiply the data before any other processing. Our original images consist in RGB coefficients in the 0-255, but such values would be too high for our models to process (given a typical learning rate), so we target values between 0 and 1 instead by scaling with a 1/255. factor.\n",
+    "\n",
+    "shear_range is for randomly applying shearing transformations\n",
+    "\n",
+    "zoom_range is for randomly zooming inside pictures\n",
+    "\n",
+    "horizontal_flip is for randomly flipping half of the images horizontally --relevant when there are no assumptions of \n",
+    "\n",
+    "horizontal assymetry (e.g. real-world pictures).\n",
+    "fill_mode is the strategy used for filling in newly created pixels, which can appear after a rotation or a width/height shift.\n",
+    "\n",
+    "\n",
+    "**2_if we add more [epochs](https://towardsdatascience.com/epoch-vs-iterations-vs-batch-size-4dfb9c7ce9c9) in the training process but here we can't add more cause more parameters means longer training**\n",
+    "\n",
+    "One Epoch is when an ENTIRE dataset is passed forward and backward through the neural network only ONCE.\n",
+    "\n",
+    "Why we use more than one Epoch?\n",
+    "I know it doesn’t make sense in the starting that — passing the entire dataset through a neural network is not enough. And we need to pass the full dataset multiple times to the same neural network. But keep in mind that we are using a limited dataset and to optimise the learning and the graph we are using Gradient Descent which is an iterative process. So, updating the weights with single pass or one epoch is not enough\n",
+    "\n",
+    "One epoch leads to underfitting of the curve in the graph (below).\n",
+    "![Screenshot](improvement.png)\n",
+    "\n",
+    "As the number of epochs increases, more number of times the weight are changed in the neural network and the curve goes from underfitting to optimal to overfitting curve\n",
+    "\n",
+    "So, what is the right numbers of epochs?\n",
+    "Unfortunately, there is no right answer to this question. The answer is different for different datasets but you can say that the numbers of epochs is related to how diverse your data is… just an example - Do you have only black cats in your dataset or is it much more diverse dataset?\n",
+    "\n",
+    "\n",
+    "**3_if we use more [layers](https://machinelearningmastery.com/how-to-control-neural-network-model-capacity-with-nodes-and-layers/) of the neural network** \n",
+    "\n",
+    "The capacity of a neural network can be controlled by two aspects of the model:\n",
+    "\n",
+    "Number of Nodes\n",
+    "\n",
+    "Number of Layers\n",
+    "\n",
+    "A model with more nodes or more layers has a greater capacity and, in turn, is potentially capable of learning a larger set of mapping functions. A model with more layers and more hidden units per layer has higher representational capacity — it is capable of representing more complicated functions.\n",
+    "\n",
+    "Neural network model capacity is controlled both by the number of nodes and the number of layers in the model.\n",
+    "\n",
+    "A model with a single hidden layer and sufficient number of nodes has the capability of learning any mapping function, but the chosen learning algorithm may or may not be able to realize this capability.\n",
+    "\n",
+    "Increasing the number of layers provides a short-cut to increasing the capacity of the model with fewer resources, and modern techniques allow learning algorithms to successfully train deep models.\n"
    ]
   },
   {
